Fixed database credentials not loading from .env file...

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 ### Database Config ###
-DB_NAME="angular_nest_blog_db"
-DB_USER="core"
-DB_PASS="core@pass"
+DB_NAME='angular_nestjs_blog_db'
+DB_USER='core'
+DB_PASS='core@pass'
